--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Lily — A Quiet Bloom</title>
+  <title>Ami — Lily</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
     *{box-sizing:border-box;margin:0;padding:0}
@@ -88,7 +88,7 @@
     <section class="section">
       <div class="letter-wrap">
         <article class="letter">
-          <h2>Quiet Bloom — Part I</h2>
+          <h2>Ami — 41</h2>
           <p>In a world that rushes toward everything — success, perfection, recognition — she stands still, like a lily waiting for the morning sun. At first, no one notices her. She is quiet, calm, and content to grow in her own time. Yet beneath her stillness lies something extraordinary — a strength that does not shout, a beauty that does not need to be seen to be real.</p>
           <p>The lily does not bloom overnight. It takes time — days of waiting, nights of silence, and moments when nothing seems to change. But all the while, it gathers strength beneath the soil. She is the same. Through her struggles and doubts, she learns patience. Through her pain, she finds purpose.</p>
         </article>
@@ -102,7 +102,7 @@
     <section class="section">
       <div class="letter-wrap">
         <article class="letter">
-          <h2>Quiet Bloom — Part II</h2>
+          <h2>Ami — 41</h2>
           <p>She grows gently, gracefully, until one day, she opens up — and the world can finally see the beauty that was always there. When she blooms, she does not ask for attention. Her beauty speaks softly, like sunlight touching water.</p>
           <p>She inspires not because she is perfect, but because she is real — because she took her time, because she dared to grow at her own pace. Like the lily, she teaches that beautiful things are not born in haste. They are formed slowly, through seasons of quiet resilience and faith.</p>
           <p>She reminds me that the most beautiful souls are not those who bloom first, but those who bloom fully — the ones who learn that patience is power, and growth is grace. She, like a lily, carries light in her petals and hope in her heart.</p>
@@ -149,3 +149,4 @@
   </script>
 </body>
 </html>
+
